--- a/Eduversity.com/Server/appsettings.json
+++ b/Eduversity.com/Server/appsettings.json
@@ -1,10 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JServer; Database=EduversityDatabase; User ID=sa; Password=Jonathan@Abraham12; Encrypt=false;"
+    "DefaultConnection": "Data Source=SQL5110.site4now.net;Initial Catalog=db_a9d081_university;User Id=db_a9d081_university_admin;Password=Uni199911"
   },
   "AppSettings": {
     "Token": "Chinweotutomamadunwengozi"
   },
+  "EmailHost": "smtp.ethereal.email",
+  "EmailPort": "587",
+  "EmailUsername": "nellie.bergstrom@ethereal.email",
+  "EmailPassword": "jh6JKmxrsTUceTuqmh",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
