--- a/Eduversity.com/Server/appsettings.Development.json
+++ b/Eduversity.com/Server/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=EduversityDB; Trusted_Connection=True; MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=JServer; Database=EduversityDB; User ID=sa; Password=Jonathan@Abraham12; Encrypt=false;"
+    "DefaultConnection": "Server=DServer; Database=EduversityDB; User ID=sa; Password=Jonathan@Abraham12; Encrypt=false;"
   },
   "AppSettings": {
     "Token": "Chinweotutomamadunwengozi"
